FIX bug on searchMusicBar add z-index for suggestion box

--- a/modules/music/client/components/searchMusicBar/style/searchBar.scss
+++ b/modules/music/client/components/searchMusicBar/style/searchBar.scss
@@ -77,10 +77,12 @@
         list-style-type: none;
         margin: 0 0 0 40px;
         padding: 0;
-        background-color: white;
+        background-color: $white;
         border-left: 1px solid #676a6d;
         border-right: 1px solid #676a6d;
         border-bottom: 1px solid #676a6d;
+        z-index: $zindex-navigation;
+        position: relative;
 
         li {
           padding: 10px 20px;
@@ -88,7 +90,7 @@
           color: #676a6d;
 
           b {
-            color: black;
+            color: $black;
           }
 
           &:hover {
@@ -109,7 +111,7 @@
       left: 40px;
       padding-left: 35px;
       border-radius: 25px 0 0 25px;
-      background-color: white;
+      background-color: $white;
       border-width: 0;
       box-shadow: 0 0 10px 0 #656565;
       width: 410px;
@@ -228,7 +230,7 @@
       margin-right: 1px;
       list-style-type: none;
       background-color: rgba(0, 0, 0, 0.8);
-      color: white;
+      color: $white;
       cursor: pointer;
 
       &:nth-child(1) {
